@@ -8,8 +8,9 @@ import org.springframework.transaction.annotation.Transactional;
 import teamkiim.koffeechat.domain.member.domain.Member;
 import teamkiim.koffeechat.domain.member.repository.MemberRepository;
 import teamkiim.koffeechat.domain.memberfollow.domain.MemberFollow;
-import teamkiim.koffeechat.domain.memberfollow.repository.MemberFollowRepository;
+import teamkiim.koffeechat.domain.memberfollow.dto.MemberAndLoginMemberDto;
 import teamkiim.koffeechat.domain.memberfollow.dto.MemberFollowListResponse;
+import teamkiim.koffeechat.domain.memberfollow.repository.MemberFollowRepository;
 import teamkiim.koffeechat.domain.notification.domain.NotificationType;
 import teamkiim.koffeechat.domain.notification.service.NotificationService;
 import teamkiim.koffeechat.domain.notification.dto.request.CreateNotificationRequest;
@@ -17,7 +18,6 @@ import teamkiim.koffeechat.global.exception.CustomException;
 import teamkiim.koffeechat.global.exception.ErrorCode;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -29,16 +29,13 @@ public class MemberFollowService {
     private final NotificationService notificationService;
 
     public boolean isMemberFollowed(Member member, Member followingMember) {
-
-        if (memberFollowRepository.findByFollowerAndFollowing(member, followingMember).isPresent()) return true;
-
-        return false;
+        return memberFollowRepository.findByFollowerAndFollowing(member, followingMember).isPresent();
     }
 
     /**
      * 사용자 팔로우 -> 팔로우, 언팔로우
      *
-     * @param followerId 팔로우 누른 회원 PK
+     * @param followerId  팔로우 누른 회원 PK
      * @param followingId member가 팔로우한 회원 PK
      */
     @Transactional
@@ -53,15 +50,8 @@ public class MemberFollowService {
         if (isMemberFollowed(follower, following)) {            // 팔로우 취소
             unfollow(follower, following);
         } else {
-            follow(follower, following);                        // 팔로우//회원이 구독한 회원의 팔로워 수 ++
-
-//            //팔로우 알림
-//            Long receiverId = following.getId();
-//            String notiTitle = follower.getNickname() + "님이 팔로우 신청을 했습니다.";
-//            String notiUrl = String.format("/member/profile?profileMemberId=%d", follower.getId());
-//            notificationService.createNotification(CreateNotificationRequest
-//                    .of(follower, notiTitle, null, notiUrl, NotificationType.FOLLOW), receiverId);
-
+            follow(follower, following);                        // 팔로우 //회원이 구독한 회원의 팔로워 수 ++
+            notificationService.createFollowNotification(follower, following);//팔로우 알림 생성
         }
     }
 
@@ -92,86 +82,113 @@ public class MemberFollowService {
     }
 
     /**
+     * 팔로잉/팔로워 리스트 조회 시 멤버 정보 조회
+     */
+    private MemberAndLoginMemberDto findMemberInfo(Long memberId, Long loginMemberId) {
+
+        //현재 로그인한 회원의 정보 찾아오기. 없으면 null
+        Member loginMember = (loginMemberId == null) ? null : memberRepository.findById(loginMemberId)
+                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+
+        //본인 프로필 조회 / 타회원 프로필 조회
+        Member member = (memberId.equals(loginMemberId)) ? loginMember : memberRepository.findById(memberId)
+                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+
+        return MemberAndLoginMemberDto.of(member, loginMember);
+
+    }
+
+    /**
      * 특정 회원의 팔로워 리스트 조회
      *
-     * @param memberId          조회할 대상 회원 PK
-     * @param loginMemberId     로그인 회원 PK
-     * @param page              페이지 번호
-     * @param size              페이지 당 조회할 데이터 수
+     * @param memberId      조회할 대상 회원 PK
+     * @param loginMemberId 로그인 회원 PK
+     * @param page          페이지 번호
+     * @param size          페이지 당 조회할 데이터 수
      * @return List<MemberFollowListResponse>
      */
     public List<MemberFollowListResponse> findFollowerList(Long memberId, Long loginMemberId, int page, int size) {
 
-        Member member = null;
-
-        // member를 팔로우하는 follower들 찾기
-        if(memberId == null){
-            member = memberRepository.findById(loginMemberId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-        }
-        else{
-            member = memberRepository.findById(memberId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-        }
+        MemberAndLoginMemberDto dto = findMemberInfo(memberId, loginMemberId);
+        Member member = dto.getMember();
+        Member loginMember = dto.getLoginMember();
 
         PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
-
-        // 로그인한 회원이 null이 아닌 경우 미리 조회
-        Member loginMember = (loginMemberId == null) ? null : memberRepository.findById(loginMemberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-
         List<Member> followerList = memberFollowRepository.findByFollowing(member, pageRequest).stream()
-                .map(MemberFollow::getFollower)
-                .collect(Collectors.toList());
+                .map(MemberFollow::getFollower).toList();
 
-        return followerList.stream()
-                .map(follower -> {
-                    boolean isFollowedByLoginMember = (loginMember != null) && memberFollowRepository.existsByFollowerAndFollowing(loginMember, follower);
-                    boolean isLoginMember = follower.equals(loginMember);
-                    return MemberFollowListResponse.of(follower, isFollowedByLoginMember, isLoginMember);
-                })
-                .collect(Collectors.toList());
+        return followerList.stream().map(follower -> {
+            boolean isFollowedByLoginMember = (loginMember != null) && memberFollowRepository.existsByFollowerAndFollowing(loginMember, follower);
+            boolean isLoginMember = follower.equals(loginMember);
+            return MemberFollowListResponse.of(follower, isFollowedByLoginMember, isLoginMember);
+        }).toList();
     }
 
     /**
      * 특정 회원의 팔로잉 리스트 조회
      *
-     * @param memberId          조회할 대상 회원 PK
-     * @param loginMemberId     로그인 회원 PK
-     * @param page              페이지 번호
-     * @param size              페이지 당 조회할 데이터 수
+     * @param memberId      조회할 대상 회원 PK
+     * @param loginMemberId 로그인 회원 PK
+     * @param page          페이지 번호
+     * @param size          페이지 당 조회할 데이터 수
      * @return List<MemberFollowListResponse>
      */
     public List<MemberFollowListResponse> findFollowingList(Long memberId, Long loginMemberId, int page, int size) {
 
-        Member member = null;
-
-        // member가 팔료우하는 following들 찾기
-        if(memberId == null){
-            member = memberRepository.findById(loginMemberId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-        }
-        else{
-            member = memberRepository.findById(memberId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-        }
+        MemberAndLoginMemberDto dto = findMemberInfo(memberId, loginMemberId);
+        Member member = dto.getMember();
+        Member loginMember = dto.getLoginMember();
 
         PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
 
-        // 로그인한 회원이 null이 아닌 경우 미리 조회
-        Member loginMember = (loginMemberId == null) ? null : memberRepository.findById(loginMemberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-
         List<Member> followingList = memberFollowRepository.findByFollower(member, pageRequest).stream()
-                .map(MemberFollow::getFollowing)
-                .collect(Collectors.toList());
+                .map(MemberFollow::getFollowing).toList();
 
         return followingList.stream()
                 .map(following -> {
                     boolean isFollowedByLoginMember = (loginMember != null) && memberFollowRepository.existsByFollowerAndFollowing(loginMember, following);
                     boolean isLoginMember = following.equals(loginMember);
                     return MemberFollowListResponse.of(following, isFollowedByLoginMember, isLoginMember);
-                })
-                .collect(Collectors.toList());
+                }).toList();
+    }
+
+    /**
+     * 팔로워 / 팔로잉 리스트에서 사용자 검색
+     *
+     * @param memberId      팔로워 리스트 주인
+     * @param loginMemberId 로그인 사용자
+     * @param page          페이지 번호
+     * @param size          페이지 당 조회할 데이터 수
+     * @return List<MemberFollowListResponse>
+     */
+    public List<MemberFollowListResponse> searchFollowers(Long memberId, Long loginMemberId, String keyword, int page, int size) {
+
+        MemberAndLoginMemberDto dto = findMemberInfo(memberId, loginMemberId);
+        Member member = dto.getMember();  // 팔로워 리스트 주인
+        Member loginMember = dto.getLoginMember();
+
+        PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
+        List<Member> searchList = memberFollowRepository.findByFollowingAndKeyword(member, keyword, pageRequest).stream().toList();
+
+        return searchList.stream().map(follower -> {
+            boolean isFollowedByLoginMember = (loginMember != null) && memberFollowRepository.existsByFollowerAndFollowing(loginMember, follower);
+            boolean isLoginMember = follower.equals(loginMember);
+            return MemberFollowListResponse.of(follower, isFollowedByLoginMember, isLoginMember);
+        }).toList();
+    }
+
+    public List<MemberFollowListResponse> searchFollowings(Long memberId, Long loginMemberId, String keyword, int page, int size) {
+        MemberAndLoginMemberDto dto = findMemberInfo(memberId, loginMemberId);
+        Member member = dto.getMember();  // 팔로잉 리스트 주인
+        Member loginMember = dto.getLoginMember();
+
+        PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
+        List<Member> searchList = memberFollowRepository.findByFollowerAndKeyword(member, keyword, pageRequest).stream().toList();
+
+        return searchList.stream().map(follower -> {
+            boolean isFollowedByLoginMember = (loginMember != null) && memberFollowRepository.existsByFollowerAndFollowing(loginMember, follower);
+            boolean isLoginMember = follower.equals(loginMember);
+            return MemberFollowListResponse.of(follower, isFollowedByLoginMember, isLoginMember);
+        }).toList();
     }
 }
