@@ -7,22 +7,26 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
+import teamkiim.koffeechat.domain.comment.domain.Comment;
 import teamkiim.koffeechat.domain.member.domain.Member;
 import teamkiim.koffeechat.domain.member.repository.MemberRepository;
+import teamkiim.koffeechat.domain.memberfollow.repository.MemberFollowRepository;
 import teamkiim.koffeechat.domain.notification.domain.Notification;
+import teamkiim.koffeechat.domain.notification.domain.NotificationType;
+import teamkiim.koffeechat.domain.notification.domain.SseEmitterWrapper;
+import teamkiim.koffeechat.domain.notification.dto.request.CreateChatNotificationRequest;
+import teamkiim.koffeechat.domain.notification.dto.request.CreateNotificationRequest;
+import teamkiim.koffeechat.domain.notification.dto.response.NotificationListItemResponse;
+import teamkiim.koffeechat.domain.notification.dto.response.NotificationResponse;
 import teamkiim.koffeechat.domain.notification.repository.EmitterRepository;
 import teamkiim.koffeechat.domain.notification.repository.NotificationRepository;
-import teamkiim.koffeechat.domain.notification.dto.request.CreateNotificationRequest;
-import teamkiim.koffeechat.domain.notification.dto.response.NotificationListResponse;
-import teamkiim.koffeechat.domain.notification.dto.response.NotificationResponse;
+import teamkiim.koffeechat.domain.post.common.domain.Post;
 import teamkiim.koffeechat.global.exception.CustomException;
 import teamkiim.koffeechat.global.exception.ErrorCode;
 
 import java.io.IOException;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -35,6 +39,7 @@ public class NotificationService {
     private final MemberRepository memberRepository;
     private final EmitterRepository emitterRepository;
     private final NotificationRepository notificationRepository;
+    private final MemberFollowRepository memberFollowRepository;
 
     /**
      * 로그인한 회원과 서버의 SSE 연결 생성
@@ -44,12 +49,11 @@ public class NotificationService {
      */
     public SseEmitter connectNotification(Long memberId) {
 
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+        memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         SseEmitter sseEmitter = new SseEmitter(DEFAULT_TIMEOUT);   //연결 유지를 위한 적절한 타임 아웃 설정 필요
         String emitterId = memberId + "_" + System.currentTimeMillis();  //memberId + 연결된 시간으로 id 생성 -> memberId를 통해 알림 전송
-        emitterRepository.save(emitterId, sseEmitter);
+        emitterRepository.save(emitterId, new SseEmitterWrapper(sseEmitter));
 
         sseEmitter.onTimeout(() -> {
             log.info("disconnected by timeout server sent event: id={}", emitterId);
@@ -66,35 +70,88 @@ public class NotificationService {
 
         //연결 후 첫 메시지 전송 : 503 에러 방지
         String eventId = memberId + "_" + System.currentTimeMillis();
-        sendNotification(emitterId, sseEmitter, eventId, member.getNickname() + " SSE connected");
+        sendNotification(emitterId, sseEmitter, eventId, "connected");
 
         return sseEmitter;
     }
 
     /**
-     * 알림 생성
-     *
-     * @param createNotificationRequest 알림 내용을 담은 DTO
-     * @param memberId                  알림을 받는 회원 pk
+     * 글 알림 생성
      */
-    public void createNotification(CreateNotificationRequest createNotificationRequest, Long memberId, LocalDateTime currTime) {
+    public void createPostNotification(Member writer, Post post) {
 
-        Member receiver = memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+        List<Member> followerList = memberFollowRepository.findFollowerListByFollowing(writer);  // 글쓴이의 팔로워들
+
+        followerList.forEach(follower -> createNotification(CreateNotificationRequest.of(NotificationType.POST, writer, post, null), follower));
+    }
+
+    /**
+     * 댓글 알림 생성
+     */
+    public void createCommentNotification(Post post, Member sender, Comment comment) {
+
+        Member receiver = post.getMember();  // 글쓴이
+
+        createNotification(CreateNotificationRequest.of(NotificationType.COMMENT, sender, post, comment), receiver);
+    }
+
+    /**
+     * 팔로우 알림 생성
+     */
+    public void createFollowNotification(Member follower, Member following) {
+
+        Member receiver = following;
+
+        createNotification(CreateNotificationRequest.of(NotificationType.FOLLOW, follower, null, null), receiver);
+    }
+
+    /**
+     * 알림 생성
+     */
+    private void createNotification(CreateNotificationRequest createNotificationRequest, Member receiver) {
 
         String eventId = receiver.getId() + "_" + System.currentTimeMillis();   //eventId 생성
-
-        Notification savedNotification = notificationRepository.save(createNotificationRequest.toEntity(receiver, eventId, currTime));
+        Notification savedNotification = notificationRepository.save(createNotificationRequest.toEntity(eventId, receiver));
 
         receiver.addUnreadNotifications();  //읽지 않은 알림 개수 +1
 
-        Map<String, SseEmitter> emitters = emitterRepository.findAllEmitterByReceiverId(String.valueOf(receiver.getId()));  //알림 받는 사람이 연결되어있는 모든 emitter에 이벤트 발송
+        Map<String, SseEmitterWrapper> emitters = emitterRepository.findAllEmitterByReceiverId(String.valueOf(receiver.getId()));  //알림 받는 사람이 연결되어있는 모든 emitter에 이벤트 발송
 
-        emitters.forEach(
-                (id, emitter) -> {
-                    sendNotification(id, emitter, eventId, NotificationResponse.of(savedNotification, receiver.getUnreadNotifications()));
-                }
-        );
+        emitters.forEach((id, emitter) -> {
+            sendNotification(id, emitter.getSseEmitter(), eventId, NotificationResponse.of(savedNotification, receiver.getUnreadNotifications()));
+        });
+    }
+
+    /**
+     * 채팅 알림 생성
+     */
+    public void createChatNotification(CreateChatNotificationRequest createNotificationRequest, Member receiver) {
+        String eventId = receiver.getId() + "_" + System.currentTimeMillis();   //eventId 생성
+
+        Map<String, SseEmitterWrapper> emitters = emitterRepository.findReceiveEmitterByReceiverId(String.valueOf(receiver.getId()));  //알림 받는 사람이 연결되어있는 모든 emitter에 이벤트 발송
+
+        emitters.forEach((id, emitter) -> {
+            sendNotification(id, emitter.getSseEmitter(), eventId, createNotificationRequest);
+        });
+    }
+
+    /**
+     * 채팅방 입장/퇴장 시 알림 on/off
+     */
+    public void startNotifications(Member receiver) {
+        Map<String, SseEmitterWrapper> emitters = emitterRepository.findAllEmitterByReceiverId(String.valueOf(receiver.getId()));  //알림 받는 사람이 연결되어있는 모든 emitter에 이벤트 발송
+
+        emitters.forEach((id, emitter) -> {
+            emitter.startReceiving();
+        });
+    }
+
+    public void stopNotifications(Member receiver) {
+        Map<String, SseEmitterWrapper> emitters = emitterRepository.findAllEmitterByReceiverId(String.valueOf(receiver.getId()));  //알림 받는 사람이 연결되어있는 모든 emitter에 이벤트 발송
+
+        emitters.forEach((id, emitter) -> {
+            emitter.stopReceiving();
+        });
     }
 
     /**
@@ -104,9 +161,7 @@ public class NotificationService {
      */
     private void sendNotification(String emitterId, SseEmitter emitter, String eventId, Object response) {
         try {
-            emitter.send(SseEmitter.event()
-                    .id(eventId)
-                    .data(response));
+            emitter.send(SseEmitter.event().id(eventId).data(response));
         } catch (IOException e) {
             log.error("Failed to send notification, eventId={}, emitterId={}, error={}", eventId, emitterId, e.getMessage());
             emitter.completeWithError(e);
@@ -121,8 +176,7 @@ public class NotificationService {
      */
     @Transactional
     public int getUnreadNotificationCount(Long memberId) {
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+        Member member = memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         int unreadNotificationCount = notificationRepository.countByReceiverAndIsReadFalse(member);
 
@@ -139,14 +193,12 @@ public class NotificationService {
      * @param memberId 로그인 한 회원
      * @return List<NotificationListResponse>
      */
-    public List<NotificationListResponse> list(Long memberId, int page, int size) {
-        memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+    public List<NotificationListItemResponse> getNotificationList(Long memberId, int page, int size) {
+        memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
         List<Notification> notificationList = notificationRepository.findAllByReceiverId(memberId, pageRequest).getContent();
-
-        return notificationList.stream().map(NotificationListResponse::of).collect(Collectors.toList());
+        return notificationList.stream().map(NotificationListItemResponse::of).toList();
     }
 
     /**
@@ -157,11 +209,9 @@ public class NotificationService {
      * @Return 읽지 않은 알림 개수
      */
     @Transactional
-    public long readUpdate(Long memberId, Long notiId) {
-        Member receiver = memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-        Notification notification = notificationRepository.findByIdAndReceiverId(notiId, memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOTIFICATION_NOT_FOUND));
+    public long updateNotificationIsRead(Long memberId, Long notiId) {
+        Member receiver = memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+        Notification notification = notificationRepository.findByIdAndReceiverId(notiId, memberId).orElseThrow(() -> new CustomException(ErrorCode.NOTIFICATION_NOT_FOUND));
 
         if (!notification.isRead()) {
             notification.read();                   // 알림 읽음 처리
@@ -179,16 +229,44 @@ public class NotificationService {
      * @Return 읽지 않은 알림 개수
      */
     @Transactional
-    public long delete(Long memberId, Long notiId) {
-        Member receiver = memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
-        Notification notification = notificationRepository.findByIdAndReceiverId(notiId, memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOTIFICATION_NOT_FOUND));
+    public long deleteNotification(Long memberId, Long notiId) {
+        Member receiver = memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+        Notification notification = notificationRepository.findById(notiId).orElseThrow(() -> new CustomException(ErrorCode.NOTIFICATION_NOT_FOUND));
 
-        if (!notification.isRead()) receiver.removeUnreadNotifications();  // 읽지 않은 알림 개수 -1
+        if (!notification.isRead()) {
+            receiver.removeUnreadNotifications();  // 읽지 않은 알림 개수 -1
+        }
         notificationRepository.delete(notification);
 
         return receiver.getUnreadNotifications();
+    }
+
+    /**
+     * 알림 전체 삭제
+     *
+     * @param memberId member pk
+     * @Return 읽지 않은 알림 개수 : 0
+     */
+    @Transactional
+    public void deleteAllNotifications(Long memberId) {
+        Member receiver = memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+
+        notificationRepository.deleteAllByReceiver(receiver);     //알림 전체 삭제
+        receiver.updateUnreadNotificationCount(0); //읽지 않은 알림 개수 업데이트
+    }
+
+    /**
+     * 알림 전체 읽기
+     *
+     * @param memberId member pk
+     * @Return 읽지 않은 알림 개수 : 0
+     */
+    @Transactional
+    public void updateAllNotificationsIsRead(Long memberId) {
+        Member receiver = memberRepository.findById(memberId).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+
+        notificationRepository.updateAllIsRead(receiver);     //알림 전체 읽음
+        receiver.updateUnreadNotificationCount(0); //읽지 않은 알림 개수 업데이트
     }
 
 }
