@@ -1,8 +1,6 @@
 package teamkiim.koffeechat.domain.vote.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import teamkiim.koffeechat.domain.member.domain.Member;
@@ -23,7 +21,6 @@ import teamkiim.koffeechat.global.exception.CustomException;
 import teamkiim.koffeechat.global.exception.ErrorCode;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -38,8 +35,7 @@ public class VoteService {
 
     //멤버가 투표를 했는지 안했는지
     public boolean hasMemberVoted(Vote vote, Member member) {
-        if (voteRecordRepository.findByVoteAndMember(vote, member).isEmpty()) return false;
-        return true;
+        return !voteRecordRepository.findByVoteAndMember(vote, member).isEmpty();
     }
 
     /**
@@ -55,9 +51,8 @@ public class VoteService {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new CustomException(ErrorCode.POST_NOT_FOUND));
 
-        if (post.isEditing()) {  // 작성 중이 아니라면 투표를 생성할 수 없다.
-            throw new CustomException(ErrorCode.VOTE_FORBIDDEN);
-        }
+        // 작성 중이 아니라면 투표를 생성할 수 없다.
+        if (post.isEditing()) throw new CustomException(ErrorCode.VOTE_FORBIDDEN);
 
         Vote vote = saveVoteServiceRequest.toEntity(post, saveVoteServiceRequest.getTitle());  //투표 생성
         Vote savedVote = voteRepository.save(vote);
@@ -68,7 +63,7 @@ public class VoteService {
     }
 
     /**
-     * 투표 내용 수정
+     * 투표 내용 수정 : 투표 항목 추가만 가능
      *
      * @param modifyVoteServiceRequest 투표 수정 요청
      * @param vote                     수정할 투표
@@ -76,7 +71,8 @@ public class VoteService {
     @Transactional
     public void modifyVote(ModifyVoteServiceRequest modifyVoteServiceRequest, Vote vote) {
 
-        vote.modify(modifyVoteServiceRequest.getTitle());
+        if (modifyVoteServiceRequest == null) return;
+        if (modifyVoteServiceRequest.getItems() == null) throw new CustomException(ErrorCode.INVALID_VOTE_REQUEST);
 
         List<VoteItem> voteItemList = voteItemRepository.findByVote(vote);
         List<String> newVoteItemList = modifyVoteServiceRequest.getItems();
@@ -84,8 +80,7 @@ public class VoteService {
         //투표 항목 추가
         if (newVoteItemList.size() > voteItemList.size()) {
             for (int i = voteItemList.size(); i < newVoteItemList.size(); i++) {
-                VoteItem voteItem = new VoteItem(vote, newVoteItemList.get(i));
-                VoteItem savedVoteItem = voteItemRepository.save(voteItem);
+                VoteItem savedVoteItem = voteItemRepository.save(new VoteItem(vote, newVoteItemList.get(i)));
                 vote.addVoteItem(savedVoteItem);
             }
         }
@@ -100,7 +95,7 @@ public class VoteService {
      * @return isVoted 필드를 포함한 dto
      */
     @Transactional
-    public ResponseEntity<?> saveVoteRecord(Long postId, SaveVoteRecordRequest saveVoteRecordRequest, Long memberId) {
+    public List<SaveVoteRecordServiceDto> saveVoteRecord(Long postId, SaveVoteRecordRequest saveVoteRecordRequest, Long memberId) {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
@@ -117,32 +112,25 @@ public class VoteService {
         }
 
         List<VoteRecord> voteRecordList = voteRecordRepository.findByVoteAndMember(vote, member);  //기존 투표 기록
-        if (!voteRecordList.isEmpty()) { //기존 투표 기록 삭제
+        if (!voteRecordList.isEmpty()) { //기존 투표 기록 모두 삭제
             for (VoteRecord voteRecord : voteRecordList) {
-                VoteItem voteItem= voteRecord.getVoteItem();
+                VoteItem voteItem = voteRecord.getVoteItem();
                 voteItem.removeVoteRecord(voteRecord);      // 연관관계 제거
                 voteItem.removeVoteCount();                 // 투표 수 --
             }
             voteRecordRepository.deleteAll(voteRecordList);
         }
 
-        //모두 투표 취소한 경우
-//        if (saveVoteRecordRequest.getItems().isEmpty()) return ResponseEntity.status(HttpStatus.CREATED).body("투표 기록 초기화");
-
         //재투표 항목들에 대해 투표 기록 생성
         if (!saveVoteRecordRequest.getItems().isEmpty()) {
             for (VoteItem votedItem : voteItemList) {
-                VoteRecord voteRecord = VoteRecord.create(member, votedItem);
-                VoteRecord saveVoteRecord = voteRecordRepository.save(voteRecord);
+                VoteRecord saveVoteRecord = voteRecordRepository.save(VoteRecord.create(member, votedItem));
                 votedItem.addVoteRecord(saveVoteRecord);  //연관관계 주입
                 votedItem.addVoteCount();                 //투표 수 ++
             }
         }
 
-        List<SaveVoteRecordServiceDto> saveVoteRecordServiceDto = vote.getVoteItems().stream()
-                .map(SaveVoteRecordServiceDto::of).collect(Collectors.toList());
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(saveVoteRecordServiceDto);
+        return vote.getVoteItems().stream().map(SaveVoteRecordServiceDto::of).toList();
     }
 
 }
